--- a/project/package.json
+++ b/project/package.json
@@ -16,9 +16,13 @@
     "@babel/preset-typescript": "^7.18.6",
     "@typescript-eslint/eslint-plugin": "^5.48.0",
     "@typescript-eslint/parser": "^5.48.0",
+    "chart.js": "^4.1.2",
     "eslint": "^8.31.0",
     "eslint-plugin-prettier": "^4.2.1",
     "prettier": "^2.8.1",
     "typescript": "^4.9.4"
+  },
+  "dependencies": {
+    "axios": "^1.2.2"
   }
 }
